rs/ethexe/macros-tests/tests/ui/validation_gservice_fails_export_payable_without_ethabi.stderr
error: `export` attribute cannot be parsed: `payable` requires `ethabi` transport; write `#[export(ethabi, payable)]` or `#[export(scale, ethabi, payable)]`
 --> tests/ui/validation_gservice_fails_export_payable_without_ethabi.rs:7:7
  |
7 |     #[export(scale, payable)]
  |       ^^^^^^
